registry/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: ns-registry
  labels:
    app: registry
spec:
  replicas: 1
  serviceName: registry-svc
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.8.2
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
            - name: registry-config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: registry-config
          configMap:
            name: registry-cfmap
  volumeClaimTemplates:
    - metadata:
        name: registry-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
