registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: ns-registry
  labels:
    app: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: registry-port
      protocol: TCP
      port: 5000
      targetPort: 5000
