registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: ns-registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    haproxy.org/forwarded-for: "true"
    haproxy.org/auth-type: basic
    haproxy.org/auth-secret: registry-auth
    haproxy.org/auth-realm: "Registry Authentication"
spec:
  ingressClassName: prod
  tls:
    - hosts:
        - registry.hendrywilliam.com
      secretName: registry-tls
  rules:
    - host: registry.hendrywilliam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
